--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="age_label">Age: </string>
     <string name="weight_label">Weight: </string>
     <string name="placeholder">placeholder</string>
+    <string name="edit">edit</string>
 </resources>
